--- a/WYWH2/package.json
+++ b/WYWH2/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
